[build-system]
requires = [
    "uv_build>=0.8.14,<0.9.0",
    "hatchling"
]
build-backend = "hatchling.build"

[project]
name = "spin"
version = "0.1.0"
description = "CLI tool to roll out users from the list"
requires-python = ">=3.9"
dependencies = [
    "selenium>=4.36.0",
    "typer>=0.9"
]

[project.scripts]
spin = "spin.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "spin",
]
