[project]
name = "scrim-wheel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "trellaren", email = "10820376+trellaren@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
scrim-wheel = "scrim_wheel:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
